# File-encryptor-CLI-app

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  installer.nsi
include/: color.h  decryptor.h  encryptor.h  filehandler.h  hmac.h  progress.h  utils.h
src/: decryptor.cpp  encryptor.cpp  filehandler.cpp  main.cpp  utils.cpp
